--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,11 @@
         "php": "^7.3 || ^8.0",
         "guzzlehttp/guzzle": "^7"
     },
+    "require-dev": {
+        "phpdocumentor/phpdocumentor": "^2.9",
+        "phpunit/phpunit": "^9.2",
+        "vlucas/phpdotenv": "^5.6"
+    },
     "autoload": {
         "psr-4": {"bhexpress\\api_client\\": "src/"}
     }
