--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,11 @@
     },
     "autoload": {
         "psr-4": {"bhexpress\\api_client\\": "src/"}
+    },
+    "scripts": {
+        "docs": "php tools/phpdocumentor run --config=phpdoc.xml",
+        "tests": "XDEBUG_MODE=coverage vendor/bin/phpunit --configuration=phpunit.xml",
+        "tests_readonly": "vendor/bin/phpunit --configuration=phpunit.xml --no-coverage --testsuite readonly",
+        "tests_authneeded": "vendor/bin/phpunit --configuration=phpunit.xml --no-coverage --testsuite authneeded"
     }
 }
