Se añadieron las insignias al index.rst principal. Se añadió un enlace a la página principal de la documentación al README.md. Se eliminó el desgloce de ejemplo en example, y se reemplazó el ejemplo utilizado de listar por emitir una BHE. Se corrigió ci.yml.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Create temporary env file
         run: |
           echo "BHEXPRESS_API_TOKEN=${{ secrets.BHEXPRESS_API_TOKEN }}" >> tests/test.env
-          echo 'BHEXPRESS_EMISOR_RUT="76192083-9"' >> tests/test.env
+          echo "BHEXPRESS_EMISOR_RUT=${{ secrets.BHEXPRESS_EMISOR_RUT }}" >> tests/test.env
       
       - name: Run PHP tests read only
         run: |
