--- a/composer.json
+++ b/composer.json
@@ -15,19 +15,15 @@
         "issues": "https://github.com/BHExpress/bhexpress-api-client-php/issues",
         "source": "https://github.com/BHExpress/bhexpress-api-client-php"
     },
-    "config": {
-        "platform": {
-            "php": "7.3"
-        }
-    },
     "require": {
-        "php": "^7.3 || ^8.0",
+        "php": "^8.2",
         "guzzlehttp/guzzle": "^7"
     },
     "require-dev": {
-        "phpdocumentor/phpdocumentor": "^2.9",
-        "phpunit/phpunit": "^9.2",
-        "vlucas/phpdotenv": "^5.6"
+        "ext-xdebug": "*",
+        "friendsofphp/php-cs-fixer": "^3.63",
+        "phpstan/phpstan": "^1.12",
+        "phpunit/phpunit": "^11.4"
     },
     "autoload": {
         "psr-4": {"bhexpress\\api_client\\": "src/"}
